fix: align nav header components to be spaced, justified and centered aptly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,7 @@ footer .last_updated {
 }
 
 .navBar .socials_container {
-  @apply hidden lg:flex gap-[30px] pl-[130px];
+  @apply hidden lg:flex gap-[30px];
 }
 
 .linkedin_info_container,
